--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>i can code now</h2>
     <h3>byr bye</h3>
     <h1>mahin mohid</h1>
+    <p>i am coding</p>
     
 </body>
 </html>
