--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>i can code now</h2>
-    <h3>byr bye</h3>
-    <h1>mahin mohid</h1>
-    <p>i am coding</p>
+    <h2>Its Mohiduzzaman Mahin here</h2>
+    <h3>Web developer at programming hero</h3>
+    <h1> This is my first website</h1>
+    <p> opening at github</p>
+    <img src="mahin.jpg" alt="mahins photo">
     
 </body>
 </html>
